--- a/Client/MVVM/View/MainWindow.xaml
+++ b/Client/MVVM/View/MainWindow.xaml
@@ -6,76 +6,110 @@
         xmlns:local="clr-namespace:Client" 
         xmlns:viewmodel="clr-namespace:Client.MVVM.ViewModel"
         mc:Ignorable="d"
-        ResizeMode="NoResize"
-        Title="MainWindow" Height="600" Width="1000">
+        ResizeMode="CanResize"
+        Title="MainWindow"
+        Height="650" Width="1000"
+        Background="#282A36"
+        Foreground="#F8F8F2">
 
     <Window.DataContext>
         <viewmodel:MainViewModel/>
     </Window.DataContext>
+
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250" MinWidth="250" MaxWidth="500"/>
-            <ColumnDefinition Width="5" />
-            <ColumnDefinition />
+            <ColumnDefinition Width="280" MinWidth="250" MaxWidth="500"/>
+            <ColumnDefinition Width="5"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <!-- Left panel remains unchanged -->
-        <DockPanel>
-            <TextBox Height="25"
+        <!-- Left Panel -->
+        <DockPanel Background="#44475A">
+            <TextBox Height="30"
                      DockPanel.Dock="Top"
-                     Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button Height="25"
+                     Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+                     Background="#6272A4"
+                     Foreground="#F8F8F2"
+                     BorderBrush="#BD93F9"
+                     FontSize="14"
+                     />
+            <Button Height="30"
                     DockPanel.Dock="Top"
-                    Content="Connect" 
-                    Command="{Binding ConnectToServerCommand}"/>
-            <Grid VerticalAlignment="Bottom" Height="500">
-                <Border BorderBrush="Gray" BorderThickness="1" Background="LightGray" CornerRadius="5">
-                    <StackPanel>
-                        <ListView Height="200" ItemsSource="{Binding Users }">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Username}"/>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                        <ListView Height="275" MaxWidth="500" ItemsSource="{Binding Messages}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock MaxWidth="250" Text="{Binding}" TextWrapping="Wrap"/>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox 
-                                Width="200"
-                         Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}"
-                         VerticalContentAlignment="Center"/>
-                            <Button 
-                                MinWidth="55"
-                        Content="Send"
-                        Command="{Binding SendToServerCommand}"/>
-                        </StackPanel>
+                    Content="Connect"
+                    Command="{Binding ConnectToServerCommand}"
+                    Background="#BD93F9"
+                    Foreground="#282A36"
+                    FontSize="14"
+                    BorderThickness="0"/>
+            <Border Background="#44475A" CornerRadius="10" Padding="10" Margin="0,0,0,10">
+                <StackPanel>
+                    <ListView ItemsSource="{Binding Users}"
+                              Background="#282A36"
+                              Foreground="#F8F8F2"
+                              BorderBrush="#6272A4"
+                              FontSize="14"
+                              Height="200">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Username}" Margin="5"/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <ListView ItemsSource="{Binding Messages}"
+                              Background="#282A36"
+                              Foreground="#F8F8F2"
+                              BorderBrush="#6272A4"
+                              FontSize="14"
+                              Height="275"
+                              Margin="0,0,0,10">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Width="250" Text="{Binding}" TextWrapping="Wrap" Margin="5"/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                        <TextBox Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}"
+                                 Background="#6272A4"
+                                 Foreground="#F8F8F2"
+                                 BorderBrush="#BD93F9"
+                                 VerticalContentAlignment="Center"
+                                 FontSize="14"
+                                 Width="200"/>
+                        <Button Content="Send"
+                                Command="{Binding SendToServerCommand}"
+                                Background="#BD93F9"
+                                Foreground="#282A36"
+                                FontSize="14"
+                                Width="55"
+                                Margin="10,0,0,0"
+                                BorderThickness="0"/>
                     </StackPanel>
-                </Border>
-            </Grid>
+                </StackPanel>
+            </Border>
         </DockPanel>
 
         <!-- GridSplitter -->
         <GridSplitter Grid.Column="1"
-                  Width="5"
-                  Background="Gray"
-                  HorizontalAlignment="Stretch"
-                  VerticalAlignment="Stretch"
-                  ResizeBehavior="PreviousAndNext"/>
+                      Width="5"
+                      Background="#6272A4"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      ResizeBehavior="PreviousAndNext"/>
 
-        <!-- Center panel with placeholders -->
-        <StackPanel Grid.Column="2" Margin="10">
-            <!-- Category Selector -->
-            <ComboBox Height="30" Width="200" Margin="0,0,0,10"
-                      />
+        <!-- Center Panel -->
+        <StackPanel Grid.Column="2" Background="#44475A">
+            <ComboBox Height="30" Width="200" Margin="10"
+                      Background="#6272A4"
+                      Foreground="#F8F8F2"
+                      BorderBrush="#BD93F9"
+                      FontSize="14"/>
 
-            <!-- Product List -->
-            <ListView Height="200" Margin="0,0,0,10">
+            <ListView Height="300" Margin="0,0,0,10"
+                      Background="#282A36"
+                      Foreground="#F8F8F2"
+                      BorderBrush="#6272A4"
+                      FontSize="14">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Product Name" Width="200"/>
@@ -85,24 +119,32 @@
                 </ListView.View>
             </ListView>
 
-            <!-- Product Form -->
-            <StackPanel Margin="0,0,0,10">
-                <TextBlock Text="Product Name:"/>
-                <TextBox Height="25" Width="300" Margin="0,5,0,10"/>
-                <TextBlock Text="Price:"/>
-                <TextBox Height="25" Width="300" Margin="0,5,0,10"/>
-                <TextBlock Text="Stock:"/>
-                <TextBox Height="25" Width="300"/>
+            <StackPanel Margin="10">
+                <TextBlock Text="Product Name:" Margin="0,5,0,5"/>
+                <TextBox Height="30" Width="300" Background="#6272A4" Foreground="#F8F8F2" BorderBrush="#BD93F9" FontSize="14"/>
+                <TextBlock Text="Price:" Margin="0,10,0,5"/>
+                <TextBox Height="30" Width="300" Background="#6272A4" Foreground="#F8F8F2" BorderBrush="#BD93F9" FontSize="14"/>
+                <TextBlock Text="Stock:" Margin="0,10,0,5"/>
+                <TextBox Height="30" Width="300" Background="#6272A4" Foreground="#F8F8F2" BorderBrush="#BD93F9" FontSize="14"/>
             </StackPanel>
 
-            <!-- Action Buttons -->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
-                <Button Content="Add" Width="75" Margin="5"/>
-                <Button Content="Edit" Width="75" Margin="5"/>
-                <Button Content="Delete" Width="75" Margin="5"/>
+                <Button Content="Add" Width="75" Margin="5"
+                        Background="#50FA7B"
+                        Foreground="#282A36"
+                        FontSize="14"
+                        BorderThickness="0"/>
+                <Button Content="Edit" Width="75" Margin="5"
+                        Background="#FFB86C"
+                        Foreground="#282A36"
+                        FontSize="14"
+                        BorderThickness="0"/>
+                <Button Content="Delete" Width="75" Margin="5"
+                        Background="#FF5555"
+                        Foreground="#F8F8F2"
+                        FontSize="14"
+                        BorderThickness="0"/>
             </StackPanel>
         </StackPanel>
-
-
     </Grid>
 </Window>
