--- a/Client/MVVM/View/MainWindow.xaml
+++ b/Client/MVVM/View/MainWindow.xaml
@@ -26,6 +26,7 @@
         <!-- Left Panel -->
         <DockPanel Background="#44475A">
             <TextBox Height="30"
+                     Margin="5"
                      DockPanel.Dock="Top"
                      Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                      Background="#6272A4"
@@ -51,7 +52,7 @@
                               Height="200">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Username}" Margin="5"/>
+                                <TextBlock Text="{Binding Username}" Margin="0,5,0,5"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
@@ -64,11 +65,11 @@
                               Margin="0,0,0,10">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Width="250" Text="{Binding}" TextWrapping="Wrap" Margin="5"/>
+                                <TextBlock Width="245" Text="{Binding}" TextWrapping="Wrap" Margin="0,5,0,5"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
-                    <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                    <StackPanel Orientation="Horizontal">
                         <TextBox Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}"
                                  Background="#6272A4"
                                  Foreground="#F8F8F2"
