--- a/Client/MVVM/View/MainWindow.xaml
+++ b/Client/MVVM/View/MainWindow.xaml
@@ -101,9 +101,9 @@
         <!-- Center Panel -->
         <StackPanel Grid.Column="2" Background="#44475A">
             <ComboBox Height="30" Width="200" Margin="10"
-                      Background="#6272A4"
-                      Foreground="#F8F8F2"
-                      BorderBrush="#BD93F9"
+                      ItemsSource="{Binding Categories}"
+                      DisplayMemberPath="Name"
+                      SelectedValuePath="Id"
                       FontSize="14"/>
 
             <ListView Height="300" Margin="0,0,0,10"
