--- a/Client/MVVM/View/MainWindow.xaml
+++ b/Client/MVVM/View/MainWindow.xaml
@@ -70,7 +70,7 @@
                         </ListView.ItemTemplate>
                     </ListView>
                     <StackPanel Orientation="Horizontal">
-                        <TextBox Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}"
+                        <TextBox x:Name="MessageTextBox" Text="{Binding Message, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                  Background="#6272A4"
                                  Foreground="#F8F8F2"
                                  BorderBrush="#BD93F9"
@@ -100,33 +100,90 @@
 
         <!-- Center Panel -->
         <StackPanel Grid.Column="2" Background="#44475A">
-            <ComboBox Height="30" Width="200" Margin="10"
+            <ComboBox x:Name="CategoryComboBox" Height="30" Width="200" Margin="10"
                       ItemsSource="{Binding Categories}"
+                      SelectedItem="{Binding SelectedCategory, Mode=TwoWay}"
                       DisplayMemberPath="Name"
                       SelectedValuePath="Id"
                       FontSize="14"/>
 
-            <ListView Height="300" Margin="0,0,0,10"
+            <ListView Height="300" 
+                      Margin="0,0,0,10"
                       Background="#282A36"
                       Foreground="#F8F8F2"
                       BorderBrush="#6272A4"
-                      FontSize="14">
+                      FontSize="14"
+                      SelectedItem="{Binding SelectedProduct, Mode=TwoWay}"
+                      ItemsSource="{Binding Products}">
+                <ListView.Resources>
+                    <!-- Style for ListView Items -->
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Foreground" Value="#F8F8F2" />
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="BorderBrush" Value="Transparent" />
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Padding" Value="5" />
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        <Style.Triggers>
+                            <!-- Hover effect -->
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#44475A" />
+                                <Setter Property="Foreground" Value="#FFFFFF" />
+                            </Trigger>
+                            <!-- Selected item effect -->
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="#6272A4" />
+                                <Setter Property="Foreground" Value="#FFFFFF" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.Resources>
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Product Name" Width="200"/>
-                        <GridViewColumn Header="Price" Width="100"/>
-                        <GridViewColumn Header="Stock" Width="100"/>
+                        <GridViewColumn 
+                            Header="Product Name" 
+                            Width="200"
+                            DisplayMemberBinding="{Binding Name}" />
+                        <GridViewColumn 
+                            Header="Price" 
+                            Width="100"
+                            DisplayMemberBinding="{Binding Price}" />
+                        <GridViewColumn 
+                            Header="Stock" 
+                            Width="100"
+                            DisplayMemberBinding="{Binding Stock}" />
                     </GridView>
                 </ListView.View>
             </ListView>
 
             <StackPanel Margin="10">
                 <TextBlock Text="Product Name:" Margin="0,5,0,5"/>
-                <TextBox Height="30" Width="300" Background="#6272A4" Foreground="#F8F8F2" BorderBrush="#BD93F9" FontSize="14"/>
+                <TextBox 
+                    Text="{Binding SelectedProduct.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Height="30" 
+                    Width="300" 
+                    Background="#6272A4" 
+                    Foreground="#F8F8F2" 
+                    BorderBrush="#BD93F9" 
+                    FontSize="14"/>
                 <TextBlock Text="Price:" Margin="0,10,0,5"/>
-                <TextBox Height="30" Width="300" Background="#6272A4" Foreground="#F8F8F2" BorderBrush="#BD93F9" FontSize="14"/>
+                <TextBox 
+                    Text="{Binding SelectedProduct.Price, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Height="30" 
+                    Width="300" 
+                    Background="#6272A4" 
+                    Foreground="#F8F8F2" 
+                    BorderBrush="#BD93F9" 
+                    FontSize="14"/>
                 <TextBlock Text="Stock:" Margin="0,10,0,5"/>
-                <TextBox Height="30" Width="300" Background="#6272A4" Foreground="#F8F8F2" BorderBrush="#BD93F9" FontSize="14"/>
+                <TextBox 
+                    Text="{Binding SelectedProduct.Stock, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Height="30" 
+                    Width="300" 
+                    Background="#6272A4" 
+                    Foreground="#F8F8F2" 
+                    BorderBrush="#BD93F9" 
+                    FontSize="14"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
